Bug 233822 - contact location coordinates problem
Summary: contact location coordinates problem
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-09 14:10 UTC by Dj YB
Modified: 2010-04-09 20:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dj YB 2010-04-09 14:10:49 UTC
Version:           4.4.1 (using 4.4.1 (KDE 4.4.1), 4.4.1-6.fc11 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30.10-105.2.23.fc11.i686.PAE

when I am trying to set a contact location coordinates to Asia/Jerusalem I can't, the list jump up to Asia/Amman, Africa/Freetown jump up to Africa/Conakry...
i guess there are more of those but I didn't check the entire list.
Comment 1 Anne Wilson 2010-04-09 15:57:19 UTC
I can confirm that in Fedora 12, KDE 4.4.1, Asia.Jeruselem does jump back to Asia/Amman and Africa/Freetown jumped to Africa/Conakry.  However, I did try quite a few other locations without seeing the problem.  It appears to only apply to a few individual locations.
Comment 2 Tobias Koenig 2010-04-09 17:03:39 UTC
SVN commit 1112949 by tokoe:

Use a smaller offset when calculating the nearest city

BUG: 233822


 M  +10 -7     geoeditwidget.cpp  
 M  +4 -3      geoeditwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1112949
Comment 3 Dj YB 2010-04-09 20:31:39 UTC
On Friday April 9 2010 18:03:42 Tobias Koenig wrote:
> https://bugs.kde.org/show_bug.cgi?id=233822
> 
> 
> Tobias Koenig <tokoe@kde.org> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|UNCONFIRMED                 |RESOLVED
>          Resolution|                            |FIXED
> 
> 
> 
> 
> --- Comment #2 from Tobias Koenig <tokoe kde org>  2010-04-09 17:03:39 ---
> SVN commit 1112949 by tokoe:
> 
> Use a smaller offset when calculating the nearest city
> 
> BUG: 233822
> 
> 
>  M  +10 -7     geoeditwidget.cpp
>  M  +4 -3      geoeditwidget.h
> 
> 
> WebSVN link: http://websvn.kde.org/?view=rev&revision=1112949

thanks,
this really is an example as to why Linux is the best :-)