Use a smaller offset when calculating the nearest city

BUG: 233822

svn path=/trunk/KDE/kdepimlibs/; revision=1112949